# JaneClone

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  ChangeLog  Doxyfile  INSTALL  Info.plist.in  JaneClone.cbp  JaneClone.layout  Makefile  Makefile.am  Makefile.in  Makefile.msw_x64.mk  Makefile.osx.mk  Makefile.unx  Makefile.unx.mk  NEWS  README  README.md  aclocal.m4  appveyor.yml  bootstrap  build.sh  config.h  config.h.in  configure  configure.ac  cross-i686-w64-mingw32.sh  cross-x86_64-w64-mingw32.sh  janeclone.bkl  janeclone.nsi.in  libtool  ninja_build.sh  ninja_rebuild.sh  ninja_test.sh  packages.config  rebuild.sh  upload_gemfury.sh  (+2 more)
.github/workflows/: build.yml  cmake.yml  release.yml
babel/: babel.h
bakefile/: bakefile.bat  janeclone.bat  janeclone.bkl  janeclone.ps1
cmake/: FindCURLpp.cmake  FindSQLite3.cmake  FindWxSQLite3.cmake  IdentifyOS.cmake
cmdline_twitter/: ChangeLog  INSTALL  LICENSE  Makefile.am  NEWS  README.md  main.cpp  main.hpp  sample_setkey.sh  write_apikeys.sh
cmdline_twitter/hashcodes/: byteorder.hpp  crypto_hash.cpp  crypto_hash.hpp  hashtest_cpp.cpp  hmac.hpp  md5.cpp  md5.hpp  portable_endian.hpp  sha1.cpp  sha1.hpp
cmdline_twitter/http/: httpclient.cpp  httpclient.hpp  httpcurl.cpp  httpcurl.hpp
cmdline_twitter/include/: minisetting.hpp  typedef.hpp
cmdline_twitter/keys/: apikeys.hpp
cmdline_twitter/oauth/: base64.cpp  base64.hpp  oauth.cpp  oauth.hpp
cmdline_twitter/twitter/: twitter_client.cpp  twitter_client.hpp  twitter_json.hpp
cmdline_twitter/ui/: simple_terminal.cpp  simple_terminal.hpp  simple_ui.cpp  simple_ui.hpp
crossguid/: CMakeLists.txt  Makefile.am
curlpp/: CMakeLists.txt  Makefile.in  curlpp-0.7.3
curlpp/include/: CMakeLists.txt  Makefile.in
curlpp/include/curlpp/: CMakeLists.txt  Easy.hpp  Makefile.am  Makefile.in  config.h  config.h.in  config.h~  stamp-h2
curlpp/include/curlpp/internal/: CMakeLists.txt  CurlHandle.hpp  Makefile.am  Makefile.in  buildconfig.h
curlpp/include/utilspp/: CMakeLists.txt  Makefile.am  Makefile.in
curlpp/include/utilspp/functor/: CMakeLists.txt  Functor.hpp  Makefile.am  Makefile.in
curlpp/include/utilspp/singleton/: CMakeLists.txt  Makefile.am  Makefile.in
curlpp/src/: CMakeLists.txt  Makefile.in
curlpp/src/curlpp/: CMakeLists.txt  Easy.cpp  Makefile.am  Makefile.in
curlpp/src/curlpp/internal/: CMakeLists.txt  CurlHandle.cpp  Makefile.am  Makefile.in  SList.cpp
curlpp/src/utilspp/: CMakeLists.txt  Makefile.am  Makefile.in
dat/: BoardList.gzip  BoardListSJIS.xml  BoardListUTF8.xml
debian/: control.buster  control.jessie  control.ubuntu  control.wheezy  menu  rules
include/: AnchoredResponsePopup.h  BoardList.h  DataType.h  ExtractBoardList.h  FindIndicatedResponse.h  JaneClone.h  JaneCloneUtil.h  MetakitAccessor.h  SQLiteAccessor.h  SQLiteBundle.h  SocketCommunication.h  ThreadContentWindow.h  VirtualBoardListCtrl.h
include/gimite/: socket.h
js-1.5-rc6a/: COPYING  ChangeLog  configure  configure.ac
js-1.5-rc6a/src/: Makefile.am  js.c  jsapi.h  jsautocfg.h  jsautotoolscfg.h  jsautotoolscfg.h.in  jscpucfg  jslibmath.h  jsnum.c  jsprf.c  jstypes.h  stamp-h1
libmk4/: Makefile.am  Makefile.in
libmk4/include/: Makefile.am  Makefile.in
libmk4/libmk4/: Makefile.am  Makefile.in
libnkf/: FlagSet.cpp  FlagSet.h  InputCodeList.cpp  InputCodeList.h  LibNKF.cpp  LibNKF.h  Makefile  NKFBaseConfig.h  NKFNativeEncoding.cpp  NKFNativeEncoding.h  UTF16Util.cpp  UTF16Util.h  UTF8Table.cpp  UTF8Table.h  Util.cpp  Util.h  config.h  libnkf.c  libnkf.h
libwxnkf/: Makefile  Makefile.am  Makefile.in  Makefile.msw_x64.mk  flagset.cpp  flagset.h  inputcode.cpp  inputcode.h  utf16util.h  utf8table.cpp  utf8table.h  util.cpp  util.h  wxnkf.cpp  wxnkfbaseconfig.h  wxnkfencoding.cpp  wxnkfencoding.h
libwxnkf/include/: Makefile.am  Makefile.in  util.h
libwxnkf/libwxnkf/: Makefile.am  Makefile.in  flagset.cpp  flagset.h  utf8table.h  util.h  wxnkf.cpp  wxnkfencoding.h
libwxnkf/src/: utf16util.cpp  utf8table.cpp  util.cpp  wxnkf.cpp  wxnkfbaseconfig.h  wxnkfencoding.cpp  wxnkfencoding.h
libwxnkf/src/wx/: wxnkf.h
libwxnkf/wx/: wxnkf.h
libwxuuid/: Makefile.am  Makefile.in  global.h  md5.h  md5c.c  wxGUID.cpp  wxGUID.h  wxMD5.cpp  wxMD5.h  wxUUID.cpp  wxUUID.h
libwxuuid/test/: wxuuid-test1.cpp
man/: janeclone.man
misc/: janeclone.desktop  janeclone.desktop.in  janeclone.menu  janeclone.wrapper  osx-dependency-check.sh  upload_bintray.sh
rc/: COPYING  aichan.xpm  icon.rc  janeclone.icns  janeclone.xpm
sqlite3/: CMakeLists.txt  Makefile.am  Makefile.in
src/: AnchoredResponsePopup.cpp  BoardList.cpp  CMakeLists.txt  ExtractBoardList.cpp  FindIndicatedResponse.cpp  JaneClone.cpp  JaneCloneUtil.cpp  Main.cpp  Makefile.am  Makefile.in  MetakitAccessor.cpp  SQLiteAccessor.cpp  SQLiteBundle.cpp  SocketCommunication.cpp  ThreadContentWindow.cpp  VirtualBoardListCtrl.cpp  anchoredresponsepopup.cpp  anchoredresponsepopup.hpp  datatype.hpp  drawpane.cpp  drawpane.hpp  enums.hpp  enumstring.hpp  extractboardlist.cpp  extractboardlist.hpp  imagepanel.cpp  imagepanel.hpp  janeclone.cpp  janeclone.hpp  janecloneimageviewer.cpp  janecloneimageviewer.hpp  janecloneuiutil.cpp  janecloneuiutil.hpp  janecloneutil.cpp  janecloneutil.hpp  main.cpp  metakitaccessor.cpp  metakitaccessor.hpp  otherpanels.cpp  otherpanels.hpp  (+18 more)
src/rc/: COPYING  hint.xrc  icon.rc  janeclone.xpm  viewer_operate.xrc
src/script/: embedded.js  pop.js
test/: .editorconfig  CMakeLists.txt  Makefile.am  jc-test1.cpp  sqlite-test.cpp  sqlite-test.hpp
wxsqlite3/: CMakeLists.txt  Makefile.am  Makefile.in  wxsqlite3.cpp
